--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,11 @@ p {
     --fs-p1: 1.3rem;
     --fs-overline: 1.2rem;
 
-    --clr-dark-cyan: hsl(158, 36%, 37%); 
-    --clr-cream: hsl(30, 38%, 92%);
-    --clr-dark-blue: hsl(212, 21%, 14%);
-    --clr-dark-grayish-blue: hsl(228, 12%, 48%);
-    --clr-white: hsl(0, 0%, 100%);
+    --clr-dark-cyan: #3c8067; 
+    --clr-cream: #f2ebe3;
+    --clr-dark-blue: #1c232b;
+    --clr-dark-grayish-blue: #6c7289;
+    --clr-white: #ffffff;
 
     --spacer: 1rem;
     --spacer-md: calc(var(--spacer) * 2);
@@ -56,9 +56,6 @@ body {
 img {
     max-width: 100%;
 }
-.btn {
-    line-height: 1.7rem;
-}
 
 /* General typography */
 h1 {
@@ -66,48 +63,93 @@ h1 {
     font-size: var(--fs-1);
     font-weight: var(--fw-b);
     line-height: 3.2rem;
+    color: var(--clr-dark-blue);
 }
-.overline {
+h2 {
     font-family: var(--ff-mont);
     font-size: var(--fs-overline);
     font-weight: var(--fw-m);
     line-height: 1.46rem;
     letter-spacing: 0.5rem;
+    text-transform: uppercase;
+    color: var(--clr-dark-grayish-blue);
 }
 p {
     font-family: var(--ff-mont);
     font-size: var(--fs-p);
     font-weight: var(--fw-m);
     line-height: 2.3rem;
+    color: var(--clr-dark-grayish-blue);
 }
 
 .main {
-    width: 343px;
-    margin: auto;
+    background-color: var(--clr-cream);
+}
+.card {
+    background-color: var(--clr-white);
+    width: 91%;
+    margin: 3rem auto;
     border-radius: 1rem;
     overflow: hidden;
+
 }
 .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-color: var(--clr-white);
+    width: 86%;
+    margin: auto;
 }
+
+/* Display - Header */
 .display__img {
-    /* May just want to use the old html insert. Getting a bit complicated for such a simple image */
-    background: url(../images/image-product-mobile.jpg) no-repeat;
-    background-size: auto 70%;
-    position: relative;
-    width: 34.3rem;
-    height: 24rem;
-    background-position-x: center;
-    background-position-y: top;
+    width: 100%;
+}
+.overline {
+    margin: 2.2rem 0 1.2rem 0;
+}
+.display__body {
+    margin: 2rem 0;
+}
+.pricing__container {
+    display: flex;
+    align-items: center;
+}
+.pricing__display-price {
+    color: var(--clr-dark-cyan);
+}
+.display-original-price {
+    font-family: var(--ff-mont);
+    font-size: var(--fs-p1);
+    font-weight: var(--fw-m);
+    line-height: 2.3rem;
+    color: var(--clr-dark-grayish-blue);
+    margin: 0 2rem;
+}
+.pricing__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 4.8rem;
+    width: 29.5rem;
+    margin: 2rem auto 2.4rem auto;
+    background-color: var(--clr-dark-cyan);
+    border-radius: 1rem;
+    font-family: var(--ff-mont);
+    font-size: var(--fs-p);
+    font-weight: var(--fw-b);
+    line-height: 1.7rem;
+    color: var(--clr-cream);
+    text-decoration: none;
+}
+.cart {
+    width: 1.4rem;
+    height: 1.6rem;
+    margin-right: 1rem;
 }
 
 .attribution { 
-    font-size: 11px; text-align: center; 
+    font-size: 11px; 
+    text-align: center; 
 }
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: #3e52a3; 
 }
