--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,13 @@ p {
   }
 
 /* General styles */
+html {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 body {
     cursor: default;
     scroll-behavior: smooth;
